[workspace]
members = ["crates/pod-common", "crates/pod-client", "crates/pod-replica"]

[package]
name = "pod-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pod-core"
path = "src/main.rs"

[dependencies]
pod-client = { path = "./crates/pod-client" }
pod-replica = { path = "./crates/pod-replica" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }