[workspace]
members = ["crates/pod-common", "crates/pod-client", "crates/pod-replica"]

[package]
name = "pod-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pod-core"
path = "src/main.rs"

[dependencies]
pod-client = { path = "./crates/pod-client" }
pod-replica = { path = "./crates/pod-replica" }
pod-common = {path = "./crates/pod-common" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5.35", features = ["derive"] }
hex = "0.4"
axum = "0.8.3"
serde = "1"
serde_yaml = "0.9"

[[bin]]
name = "pod-client"
path = "crates/pod-client/src/main.rs"

[[bin]]
name = "pod-replica"
path = "crates/pod-replica/src/main.rs"