[package]
name = "pod-common"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
bincode = {version = "2.0.1", features = ["derive"] }
thiserror = "2.0.12"
ed25519-dalek = "2.1.1"
sha2 = "0.10"
async-trait = "0.1"
tokio = { version = "1.0", features = ["rt", "net"] }
tokio-tungstenite = "0.26.2"
tracing = "0.1"
rand = "0.9.0"
futures-util = "0.3.31"