[package]
name = "pod-replica"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
pod-common = { path = "../pod-common" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
prometheus = "0.14.0"
lazy_static = "1.4"
rand = "0.9.0"
ed25519-dalek = "2.1.1"
hex = "0.4.3"
bincode = "2.0.1"