[package]
name = "pod-replica"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "pod-replica"
path = "src/main.rs"

[dependencies]
pod-common = { path = "../pod-common" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.14.0"
lazy_static = "1.4"
rand = "0.9.0"
ed25519-dalek = "2.1.1"
hex = "0.4.3"
bincode = "2.0.1"
clap = { version = "4.0", features = ["derive"] }
tokio-tungstenite = "0.26.2"
async-trait = "0.1"
uuid = {version = "1.2", features = ["v4"]}
futures-util = "0.3"